--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,78 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+import andriod.widget.AdapterView;
+import andriod.widget.Button;
+import andriod.EditText;
+import andriod.widget.ListView;
+import andriod.Spinner;
+import andriod.widget.TextView
+import andriod.Toast;
+
+import com.google.firebase.database.DataSnapshot;
+import com.google.firebase.database.DatabaseError;
+import com.google.firebase.database.DatabaseReference;
+import com.google.firebase.database.FirebaseDatabase;
+import com.google.firebase.database.ValueEventListener;
+import java.util.ArrayList;
+import java.util.List;
+
+protected void onStart() {
+    super.onStart();
+    databaseProducts.addValueEventListener(new ValueEventListener()) {
+        public void onDataChange(DataSnapshot dataSnapshot) {
+            products.clear();
+            for (DataSnapshot postSnapshot : dataSnapshot.getChildren()) {
+                Product product = postSnapshot.getValue(Product.class);
+                products.add(product);
+                ProductList productsAdapter = new ProductList(MainActivity.this, products);
+                listViewProducts.setAdapter(productsAdapter);
+            }
+        }
+        public void onCancelled(DatabaseError databaseError) {
+            //..
+        }
+    }
+}
+
+databaseProducts.addValueEventListener(new ValueEventListener()) {
+    public void onDataChange(DataSnapshot dataSnapshot) {
+        products.clear();
+        for (Datasnapshot postSnapshot : dataSnapshot.getChildren()) {
+            Product product = postSnapshot.getValue(Product.class);
+            products.add(product);
+        }
+        ProductList productsAdapter = new ProductList(MainActivity.this, products);
+        listViewProducts.setAdapter(productsAdapter);
+    }
+    public void onCancelled(DatabaseError databaseError) {
+        //..
+    }
+}
+
+private void updateProduct(String id, String name, double price) {
+    //..
+}
+
+DatabaseReference dR = FirebaseDatabase.getInstance().getReference("products").child(id);
+
+private void updateProduct(String id, String name, double price) {
+    DatabaseReference dR = FirebaseDatabase.getInstance().getReference("products").child(id);
+    Product product = new Product(id, name, price);
+    dR.setValue(Product);
+    Toast.makeText(getApplicationContext(), "product updated", Toast.LENGTH_LONG).show();
+}
+
+private boolean deleteProduct(String id) {
+    DatabaseReference dR = FirebaseDatabase.getInstance().getReference("Products").child(id)
+    dR.removeValue();
+    Toast.makeText(getApplicationContext(), "Product Deleted", Toast.LENGTH_LONG).show();
+    return true;
+}
 
 buildscript {
+
+    DatabaseReference databaseProducts;
+    databaseProducts = FirebaseDatabase.getInstance().getReference("products");
+
     repositories {
         jcenter()
         google()
@@ -10,6 +82,10 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        id 'com.google.gms.google-services' version '4.4.0' apply false
+        id 'com.android.application'
+        id 'com.google.gms.google-services'
+        implementation platform('com.google.firebase:firebase-bom:32.4.0')
         classpath 'com.google.gms:google-services:3.0.0'
     }
 }
